--- a/frontend/src/app/components/documents/editor/editor.component.scss
+++ b/frontend/src/app/components/documents/editor/editor.component.scss
@@ -1,26 +1,117 @@
 .root {
-    width: 100%;
-    height: 100%;
+    display: flex;
+    flex-direction: column;
     background-color: #2d2d2d;
+    overflow: hidden;
+    height: 100%;
+    width: 100%;
 }
 .header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    position: sticky;
-    top: 0;
-    z-index: 10;
     border-bottom: 2px solid var(--mat-sys-primary);
     background-color: #b1cff1;
     padding: 0.2rem 1rem;
     gap: 1rem;
-}
-.window-mode {
-    height: 100%;
 }
 .buttons {
     right: 0px;
     display: flex;
     justify-content: space-between;
     gap: 0.5rem;
+}
+
+#new-doc-form-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 10;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    flex-direction: column;
+    pointer-events: auto;
+    user-select: none;
+    align-items: center;
+    justify-content: center;
+}
+.tabs-container {
+    background-color: white;
+    border-radius: 0.5rem;
+    width: 30rem;
+}
+
+.form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem;
+}
+.form h3 {
+    color: var(--mat-sys-primary);
+    font-size: 1.69rem;
+    text-align: center;
+    margin: 0;
+    margin-bottom: 1.5rem;
+}
+
+.close-button-container {
+    display: flex;
+    justify-content: end;
+    padding: 1rem;
+}
+
+.content-holder {
+    flex: 1 1 auto;
+    min-height: 0;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    justify-content: space-evenly;
+
+    gap: 1rem;
+    overflow: hidden;
+}
+.editor,
+.preview {
+    width: 50%;
+    background-color: white;
+    overflow: hidden;
+}
+.preview {
+    padding: 1rem;
+    overflow: auto;
+}
+.editor {
+    width: 50%;
+    background-color: white;
+    overflow: hidden;
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    flex: 1 1 auto;
+    min-height: 0;
+}
+
+.overrides {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    height: 20rem;
+    min-height: 20rem;
+    gap: 1rem;
+    overflow: auto;
+}
+.override {
+    background-color: #b1cff1;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 0.7rem;
+}
+.override-email, .override-addedby{
+    margin: 0;
+    font-weight: normal;
 }
